// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ArticleMeta /> > should match snapshot 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 .categories span::after {
  content: ", ";
}

.c0 .categories span:last-child::after {
  content: "";
}

.c0 a:hover {
  filter: brightness(50%);
}

<div>
  <div
    class="c0"
  >
    <p>
      <span>
        Por 
      </span>
      <a
        href="/author/rodrigo-silva"
      >
        Rodrigo Silva
      </a>
      <span
        class="separator"
      >
         | 
      </span>
      <time
        datetime="2023-11-20T14:23:14.605Z"
      >
        20 de nov. de 2023
      </time>
      <span
        class="separator"
      >
         | 
      </span>
      <span
        class="categories"
      >
        <span>
          <a
            href="/category/python"
          >
            Python
          </a>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`<ArticleMeta /> > should match snapshot with no author and categories 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #AAAAAA;
  font-style: italic;
}

.c0 .categories span::after {
  content: ", ";
}

.c0 .categories span:last-child::after {
  content: "";
}

.c0 a:hover {
  filter: brightness(50%);
}

<div>
  <div
    class="c0"
  >
    <p>
      <time
        datetime="2023-11-20T14:23:14.605Z"
      >
        20 de nov. de 2023
      </time>
    </p>
  </div>
</div>
`;
